--- a/.github/workflows/docker-ecr.yml
+++ b/.github/workflows/docker-ecr.yml
@@ -30,5 +30,5 @@ jobs:
                 ECR_REPOSITORY: python-app
                 IMAGE_TAG: latest
               run: |
-                docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+                docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./flask_crud_app
                 docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
